# timeseries

./: Makefile  README.md  global_models.md  pyproject.toml
data/: library.json
script/: library.py  readme_gen.sh
